@@ -1,3 +1,11 @@
+2014-04-19  Filip Pizlo  <fpizlo@apple.com>
+
+        Address some feedback on https://bugs.webkit.org/show_bug.cgi?id=130684.
+
+        * dfg/DFGOperations.cpp:
+        * runtime/JSString.h:
+        (JSC::JSRopeString::RopeBuilder::append):
+
 2014-04-15  Filip Pizlo  <fpizlo@apple.com>
 
         compileMakeRope does not emit necessary bounds checks
